@@ -19,6 +19,7 @@ import static org.hibernate.jpa.AvailableSettings.CLASS_CACHE_PREFIX;
 import static org.hibernate.jpa.AvailableSettings.COLLECTION_CACHE_PREFIX;
 import static org.hibernate.jpa.AvailableSettings.PERSISTENCE_UNIT_NAME;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Iterator;
@@ -157,8 +158,7 @@ public class FastBootMetadataBuilder {
         final MetadataSources metadataSources = new MetadataSources(bsr);
         addPUManagedClassNamesToMetadataSources(persistenceUnit, metadataSources);
 
-        this.metamodelBuilder = (MetadataBuilderImplementor) metadataSources
-                .getMetadataBuilder(standardServiceRegistry);
+        this.metamodelBuilder = (MetadataBuilderImplementor) metadataSources.getMetadataBuilder();
         if (scanner != null) {
             this.metamodelBuilder.applyScanner(scanner);
         }
@@ -591,8 +591,8 @@ public class FastBootMetadataBuilder {
 
         if (metadataBuilderContributorImplClass != null) {
             try {
-                metadataBuilderContributor = metadataBuilderContributorImplClass.newInstance();
-            } catch (InstantiationException | IllegalAccessException e) {
+                metadataBuilderContributor = metadataBuilderContributorImplClass.getConstructor().newInstance();
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                 throw new IllegalArgumentException("The MetadataBuilderContributor class ["
                         + metadataBuilderContributorImplClass + "] could not be instantiated!", e);
             }
