@@ -96,7 +96,7 @@ public class QuarkusDevModeTest
     public Object createTestInstance(TestInstanceFactoryContext factoryContext, ExtensionContext extensionContext)
             throws TestInstantiationException {
         try {
-            Object actualTestInstance = factoryContext.getTestClass().newInstance();
+            Object actualTestInstance = factoryContext.getTestClass().getConstructor().newInstance();
             TestHTTPResourceManager.inject(actualTestInstance);
             return actualTestInstance;
         } catch (Exception e) {
